<resources>
    <string name="app_name">Tip Time</string>
    <string name="cost_of_service">Cost of service</string>
    <string name="service_question">How was the service?</string>
    <string name="tip_amazing">Amazing (20%)</string>
    <string name="tip_good">Good (18%)</string>
    <string name="tip_okay">Okay (15%)</string>
    <string name="round_up_tip">Round up tip?</string>
    <string name="calculate_button">Calculate</string>
    <string name="tip_amount">Tip amount: %s</string>
    <string name="icon_cost_of_service">Cost of service</string>
    <string name="icon_service">How was the service</string>
    <string name="icon_round_up">Round up?</string>
</resources>